fabrik/internal/engine/testdata/serve_errors.txt
Serve misuse: duplicate, missing error return, unsupported parameter.
-- go.mod --
module app

go 1.26
-- main.go --
package main

func main() {
	if err := run(); err != nil {
		panic(err)
	}
}
-- web/web.go --
package web

import "net/http"

//fabrik:http:server
func A(h http.Handler) error { return nil }

//fabrik:http:server
func B(h http.Handler) error { return nil }

//fabrik:http:server
func NoError(h http.Handler) {}

//fabrik:http:server
func BadParam(s string) error { return nil }
-- want/diags --
error: web/web.go:8:1: duplicate //fabrik:http:server
  help: first declared at $WORK/web/web.go:5:1
error: web/web.go:11:1: serve function NoError must return error
  help: example: func Serve(h http.Handler) error
error: web/web.go:15:15: serve parameter s must be http.Handler, *router.Router, or context.Context
  help: other dependencies arrive as fields of the receiver struct
